--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "framer-motion": "^12.18.1",
+    "motion": "^12.18.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
-    "react-icons": "^5.4.0",
+    "react-icons": "^5.5.0",
     "react-scroll": "^1.9.0",
+    "react-type-animation": "^3.2.0",
     "react-typed": "^2.0.12"
   },
   "devDependencies": {
